[package]
name = "kvs"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.0"
env_logger = "0.6.0"
chrono = "0.4.9"

regex = "1"

sled = "0.32.0-rc1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.2"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false
